Integrate Q2 - add Q2 to test - add QServer